2003-11-29  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (@turnoffactive): include @unsepspaces, so
	spaces in anchor names don't expand in the .aux file.  From
	Stepan.

2003-11-28  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Abstract Objects): class names are no longer
	printed in rm by default.
	* doc/texinfo.tex (\cite): redefine to always use \sl, never \ttsl.
	* doc/texinfo.tex (\ttslanted): new macro.
	(\normaldefunargs): use it for @var; go back to
	\sl by default.

	* doc/texinfo.txi: document @deftypecv.

2003-11-28  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_comment): do not perform expansion.

2003-11-28  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_r): also set font-weight to normal in HTML.

2003-11-28  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_comment): new function to output comments in
	HTML, XML and Docbook outputs.

2003-11-28  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/index.c: new section and section_name properties in
	index_elt struct.

	* makeinfo/index.c (index_add_arg): save current section number and
	title for plain text output.
	(cm_printindex): simplified printing with no_headers output.

2003-11-28  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/float.h: new section and section_name properties in
	float_elt struct.

	* makeinfo/float.c (add_new_float): save current section number and
	title for plain text output.
	(cm_listoffloats): list floats with no_headers too, following
	printindex @example.

2003-11-28  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/sectioning.h:
	* makeinfo/sectioning.c (current_sectioning_number)
	(current_sectioning_title): new functions.

	* makeinfo/sectioning.c (get_sectioning_number): moved space char at
	the end of numbers to ...
	(insert_and_underscore, sectioning_html): here.
	(get_sectioning_number, insert_and_underscore): keep track of the last
	number/title to be used by @float, @cindex like commands that need to
	know in which section they are used.
